Changed location of index.html file

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="shortcut icon" type="image/x-icon" href="img/favicon.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="docs/img/favicon.png" />
 
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="./css/styles.css">
-    <link rel="stylesheet" href="./css/links.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/links.css">
 
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,8 +28,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
     <!-- Scripts -->
-    <script type="text/javascript" src="autotyping.js"></script>
-    <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="docs/autotyping.js"></script>
+    <script type="text/javascript" src="docs/app.js"></script>
 
     <title>Clara Lam's Portfolio</title>
 </head>
@@ -94,7 +94,7 @@
                 </div>
             </div>
             <div class="flex md:w-1/2">
-                <img src="img/pfp.jpg" alt="Image of Clara Lam" class="w-80 mx-auto rounded-full border-4 border-solid border-lightPink">
+                <img src="docs/img/pfp.jpg" alt="Image of Clara Lam" class="w-80 mx-auto rounded-full border-4 border-solid border-lightPink">
             </div>
         </div>
     </section>
@@ -131,7 +131,7 @@
                     <p>Web design, Prototyping, Human-centered design</p>
                 </div>
                 <div class="flex md:w-2/5">       
-                    <img src="img/confirmed_mockup.png" alt="Mockup of Redesigned Participant View for Confirmed" class="object-contain">
+                    <img src="docs/img/confirmed_mockup.png" alt="Mockup of Redesigned Participant View for Confirmed" class="object-contain">
                 </div>
             </div>
 
@@ -149,7 +149,7 @@
                     <p>Mobile app design, Accessibility, Prototyping, Stakeholder analysis, Pitching</p>
                 </div>
                 <div class="flex md:h-4/5 md:w-2/5">       
-                    <img src="img/rightovers_mockup.png" alt="Mockup of RightOvers mobile app" class="object-contain mx-auto">
+                    <img src="docs/img/rightovers_mockup.png" alt="Mockup of RightOvers mobile app" class="object-contain mx-auto">
                 </div>
             </div>
 
@@ -167,7 +167,7 @@
                     <p>Model-View-Controller architecture, Web development, Full-stack development, Ruby on Rails, RESTful APIs</p>
                 </div>
                 <div class="flex md:w-2/5">       
-                    <img src="img/gpbo_mockup.png" alt="Mockup of Great Pittsburgh Baking Outlet" class="object-contain">
+                    <img src="docs/img/gpbo_mockup.png" alt="Mockup of Great Pittsburgh Baking Outlet" class="object-contain">
                 </div>
             </div>
 
@@ -185,7 +185,7 @@
                     <p>Mobile app development, Visual accessibility, UX Research, React Native, Expo</p>
                 </div>
                 <div class="flex md:w-2/5">       
-                    <img src="img/peerdea_mockup.png" alt="Mockup of Peerdea" class="object-contain">
+                    <img src="docs/img/peerdea_mockup.png" alt="Mockup of Peerdea" class="object-contain">
                 </div>
             </div>
         </div>
