Added about page

--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
         <!-- Flex Container -->
         <div class="flex items-center justify-between">
             <!-- Home Button -->
-            <div class="text-2xl pt-2 link link--elara">Clara Lam</div>
+            <a href="index.html" class="text-2xl pt-2 hover:text-mutedPink link link--elara">Clara Lam</a>
             <!-- Navbar Items -->
             <ul class="hidden space-x-12 text-lg md:flex">
                 <li>
                     <a href="#workSection" class="hover:text-mutedPink link link--metis">Work</a>
                 </li>
                 <li>
-                    <a href="#" class="hover:text-mutedPink link link--metis">About</a>
+                    <a href="about.html" class="hover:text-mutedPink link link--metis">About</a>
                 </li>
                 <li>
                     <a href="#" class="hover:text-mutedPink link link--metis">Resume</a>
@@ -87,7 +87,7 @@
                 <!-- Short bio -->
                 <div class="space-y-5 font-nunitosans">
                     <p class="text-xl lg:text-2xl text-left">
-                        Hi! I'm Clara, a current junior at Carnegie Mellon Univeristy studying Information Systems. I'm also minoring in Human-Computer Interaction and Business Analytics & Optimization!</p>
+                        Hi! I'm Clara, a junior at Carnegie Mellon Univeristy studying Information Systems. I'm also minoring in Human-Computer Interaction and Business Analytics & Optimization!</p>
                     <p class="text-xl lg:text-2xl text-left">
                         When designing and developing technological solutions, I do my best to advocate for the user :)
                     </p>
