--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
                     <a href="index.html#workSection" class="hover:text-mutedPink link link--metis">Work</a>
                 </li>
                 <li>
-                    <a href="#" class="hover:text-mutedPink link link--metis">About</a>
+                    <a href="about.html" class="hover:text-mutedPink link link--metis">About</a>
                 </li>
                 <li>
                     <a href="#" class="hover:text-mutedPink link link--metis">Resume</a>
@@ -67,7 +67,7 @@
                     <a href="#">About</a>
                 </li>
                 <li class="hover:text-mutedPink">
-                    <a href="#" class="hover:text-mutedPink">Resume</a>
+                    <a href="#">Resume</a>
                 </li>
             </ul>
         </div>
@@ -82,17 +82,20 @@
         <div class="container flex flex-col items-center px-8 my-auto mx-auto mt-10 md:px-48 md:space-x-3 md:flex-row">
             <!-- Photo -->
             <div class="flex md:w-1/3">
-                <img src="docs/img/pfp3.jpg" alt="Image of Clara Lam" class="w-80 mx-auto border-4 border-solid border-lightPink">
+                <img src="docs/img/pfp2.jpg" alt="Image of Clara Lam" class="w-80 rounded-lg shadow-lightPink shadow-lg">
             </div>
             <!-- Description -->
-            <div class="flex flex-col relative mb-12 space-y-8 lg:mb-0 md:w-2/3">
+            <div class="flex flex-col mb-12 space-y-8 lg:mb-0 md:w-2/3">
                 <!-- Short bio -->
                 <div class="space-y-5 font-nunitosans">
                     <p class="text-lg lg:text-xl text-left">
-                        Hi! I'm Clara, a junior studying Information Systems with minors in Human-Computer Interaction and Business Analytics & Optimization. I'm interested in pursuing career opportunities in tech, such as technical project management, product management, software engineering, and UI/UX design. I know, it sounds like a lot, but I have experience in each of these areas and am currently exploring them to see what I would like to do in the future! What I do know though, is that I want to creatively use technology to positively impact users and make people's lives easier.
+                        Hello!
                     </p>
                     <p class="text-lg lg:text-xl text-left">
-                        On campus, I am involved with CMU's <a href="http://www.cmuasa.org/" target="_blank">Asian Students Association</a> as its Treasurer, Webmaster, and previous Advocacy Chair. I'm also a lead mentor for Women in IS (Information Systems). In my free time, I like to cook and play guzheng, a traditional Chinese instrument.
+                        I'm Clara, a junior studying <a class="text-mutedPink hover:text-mutedPink hover:underline" href="https://www.cmu.edu/information-systems/" target="_blank">Information Systems</a> with minors in <a class="text-mutedPink hover:text-mutedPink hover:underline" href="https://www.hcii.cmu.edu/academics/hci-undergrad/minor-hci" target="_blank">Human-Computer Interaction</a> and <a class="text-mutedPink hover:text-mutedPink hover:underline" href="http://coursecatalog.web.cmu.edu/schools-colleges/tepper/undergraduatebusinessadministrationprogram/#minorinbusinessanalyticsoptimizationtextcontainer" target="_blank">Business Analytics & Optimization</a>. I have experience in software development and UI/UX design and am interested in creatively using technology to positively impact users and make people's lives easier!
+                    </p>
+                    <p class="text-lg lg:text-xl text-left">
+                        On campus, I am involved with CMU's <a class="text-mutedPink hover:text-mutedPink hover:underline" href="http://www.cmuasa.org/" target="_blank">Asian Students Association</a> as its Co-President and Webmaster and as a lead mentor for Women in IS (Information Systems). In my free time, I like to cook and play guzheng, a traditional Chinese instrument.
                     </p>
                 </div>
             </div>
@@ -103,7 +106,7 @@
     <section class="lg:my-24">
         <!-- Section heading/text -->
         <div class="container flex flex-col px-8 mx-auto mt-10 md:px-48">
-            <h1 class="text-mutedPink font-bold text-4xl">Let's Get in Touch!</h1>
+            <h1 class="text-mutedPink font-bold text-4xl">Let's get in touch!</h1>
         </div>
 
         <div class="container flex flex-col mx-auto mt-10 md:px-48">
@@ -115,7 +118,7 @@
             <p class="group flex py-2 px-4 rounded-full border-solid border-2 border-mutedPink items-center hover:bg-mutedPink hover:text-white">
                 <ion-icon class="mr-2 fill-mutedPink group-hover:fill-white" name="mail" alt="Clara's email: claralam@andrew.cmu.edu"></ion-icon>claralam@andrew.cmu.edu
             </p>
-            <a href="https://www.linkedin.com/in/claralam19/" target="_blank" class="group flex py-2 px-4 rounded-full border-solid border-2 border-mutedPink items-center hover:bg-mutedPink hover:text-white">
+            <a href="https://www.linkedin.com/in/claralam19/" target="_blank" class="group flex py-2 px-4 rounded-full border-solid border-2 border-mutedPink items-center text-black hover:bg-mutedPink hover:text-white">
                 <ion-icon class="mr-2 fill-mutedPink group-hover:fill-white" name="logo-linkedin"></ion-icon> LinkedIn
             </a>
         </div>
@@ -125,7 +128,7 @@
         </div>
 
         <div class="container flex mx-auto mt-5 space-x-4 md:px-48">
-            <a href="https://github.com/claralam" target="_blank" class="group flex py-2 px-4 rounded-full border-solid border-2 border-mutedPink items-center hover:bg-mutedPink hover:text-white">
+            <a href="https://github.com/claralam" target="_blank" class="group flex py-2 px-4 rounded-full border-solid border-2 border-mutedPink items-center text-black hover:bg-mutedPink hover:text-white">
                 <ion-icon class="mr-2 fill-mutedPink group-hover:fill-white" name="logo-github" alt="Clara's Github"></ion-icon> Github
             </a>
         </div>
