--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
             <!-- Navbar Items for Hamburger -->
             <ul id="menu" class="hidden bg-indigo-700 absolute left-0 top-0 w-full p-10 rounded-b-3xl space-y-10 text-white text-center">
                 <li class="hover:text-mutedPink">
-                    <a href="#">Work</a>
+                    <a href="index.html#workSection">Work</a>
                 </li>
                 <li class="hover:text-mutedPink">
-                    <a href="#">About</a>
+                    <a href="about.html">About</a>
                 </li>
                 <li class="hover:text-mutedPink">
                     <a href="#" class="hover:text-mutedPink">Resume</a>
@@ -80,16 +80,14 @@
             <!-- Description -->
             <div class="flex flex-col relative mb-12 space-y-8 lg:mb-0 md:w-1/2">
                 <!-- Autotyped words -->
-                <div class="flex py-5 space-x-2">
-                    <span class="text-xl font-semibold md:text-4xl">I'm</span>
-                    <p id="autotypedText" class="text-xl font-semibold text-mutedPink md:text-4xl"></p>
+                <div class="flex flex-col py-5 space-y-4">
+                    <span class="text-lg font-semibold md:text-4xl">Hey there!</span>
+                    <span class="text-xl font-semibold md:text-4xl">I'm <span id="autotypedText" class="text-mutedPink"></span></span>
                 </div>
                 <!-- Short bio -->
                 <div class="space-y-5 font-nunitosans">
                     <p class="text-xl lg:text-2xl text-left">
-                        Hi! I'm Clara, a junior at Carnegie Mellon Univeristy studying Information Systems. I'm also minoring in Human-Computer Interaction and Business Analytics & Optimization!</p>
-                    <p class="text-xl lg:text-2xl text-left">
-                        When designing and developing technological solutions, I do my best to advocate for the user :)
+                        Currently exploring my passion for creating intuitive and enjoyable technological solutions :)
                     </p>
                 </div>
             </div>
@@ -118,7 +116,7 @@
         <div class="container flex mx-auto md:px-48 p-5 sm:p-0 flex-wrap justify-between">
 
             <!-- Confirmed -->
-            <div class="design w-full flex flex-col shadow-xl rounded-lg p-10 my-3 gap-3 bg-white md:flex-row md:my-10">
+            <div class="design w-full flex flex-col shadow-xl rounded-lg p-10 my-3 gap-3 bg-white md:flex-row md:my-10 hover:cursor-pointer" onclick="location.href='confirmed.html';">
                 <div class="flex flex-col relative mb-12 space-y-6 lg:mb-0 md:w-3/5">
                     <h1 class="text-3xl font-semibold">Confirmed</h1>
                     <p>May 2022 - Jul 2022</p>
@@ -195,7 +193,7 @@
     <section class="lg:my-24">
         <!-- Section heading/text -->
         <div class="container flex flex-col px-8 mx-auto mt-10 md:px-48">
-            <h1 class="text-mutedPink font-bold text-4xl">Let's Get in Touch!</h1>
+            <h1 class="text-mutedPink font-bold text-4xl">Let's get in touch!</h1>
         </div>
 
         <div class="container flex flex-col mx-auto mt-10 md:px-48">
@@ -207,7 +205,7 @@
             <p class="group flex py-2 px-4 rounded-full border-solid border-2 border-mutedPink items-center hover:bg-mutedPink hover:text-white">
                 <ion-icon class="mr-2 fill-mutedPink group-hover:fill-white" name="mail" alt="Clara's email: claralam@andrew.cmu.edu"></ion-icon>claralam@andrew.cmu.edu
             </p>
-            <a href="https://www.linkedin.com/in/claralam19/" target="_blank" class="group flex py-2 px-4 rounded-full border-solid border-2 border-mutedPink items-center hover:bg-mutedPink hover:text-white">
+            <a href="https://www.linkedin.com/in/claralam19/" target="_blank" class="group flex py-2 px-4 rounded-full border-solid border-2 border-mutedPink items-center text-black hover:bg-mutedPink hover:text-white">
                 <ion-icon class="mr-2 fill-mutedPink group-hover:fill-white" name="logo-linkedin"></ion-icon> LinkedIn
             </a>
         </div>
@@ -217,7 +215,7 @@
         </div>
 
         <div class="container flex mx-auto mt-5 space-x-4 md:px-48">
-            <a href="https://github.com/claralam" target="_blank" class="group flex py-2 px-4 rounded-full border-solid border-2 border-mutedPink items-center hover:bg-mutedPink hover:text-white">
+            <a href="https://github.com/claralam" target="_blank" class="group flex py-2 px-4 rounded-full border-solid border-2 border-mutedPink items-center text-black hover:bg-mutedPink hover:text-white">
                 <ion-icon class="mr-2 fill-mutedPink group-hover:fill-white" name="logo-github" alt="Clara's Github"></ion-icon> Github
             </a>
         </div>
